# LMTK

./: .buildinfo  .dockerignore  .gitignore  .netrc  CHANGELOG.md  README.md  build_docs.sh  debug_schema_discovery.py  execute.sh  genindex.html  index.html  makefile  objects.inv  p1-dgx.slurm  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  serve_docs.sh  setup.py  tox.ini
.doctrees/: index.doctree
.doctrees/guides/: pretraining.doctree  tokenization.doctree
.github/workflows/: ci.yml  gh-pages.yml
.slurm_etc/23870/: group  passwd
.slurm_etc/23881/: passwd
.slurm_etc/24122/: group
.windsurf/rules/: knowledge.md
_modules/: index.html
_static/: pygments.css
api/config/: index.html
api/tasks/: pretraining.html  tokenization.html
api/utils/: index.html
config/: example_deepspeed_config.yaml
config/examples/: clm_training_fsdp_example.yaml  instruction_fabric_fsdp.yaml  instruction_training_deepspeed_example.yaml  instruction_training_fsdp_example.yaml  mlm_training_ddp_example.yaml  mlm_training_fsdp_example.yaml  pretraining_fabric_fsdp.yaml  tokenization_clm_training_testing_example.yaml  tokenization_instruction_v5_example.yaml  tokenization_mlm_training_testing_example.yaml  training.fabric.fsdp.instruction.huggingface.example.yaml  training.fabric.fsdp.instruction.json.example.yaml  training.fabric.fsdp.pretraining.example.yaml  training.fabric.fsdp.pretraining.local.example.yaml
config/experiments/: continual-pretrain-test.yaml  continual_gpt-2_DDP.yaml  continual_gpt-2_FSDP.yaml  continual_gpt-2_deepspeed.yaml  continual_llama_3.1_7b.yaml  continual_llama_3.2_1b.yaml  continual_llama_3.2_3b.yaml  gpt-2_tokenize_instruction.yaml  gpt-2_tokenize_instruction_dynamic.yaml  quijote_clm_training.yaml  quijote_publish.yaml  quijote_tokenization.yaml  roberta_mlm_tokenization.yaml  roberta_mlm_training_ddp.yaml  test_config.yaml  test_continual.yaml  test_tokenizer.yaml  test_tokenizer_local.yaml  tinystories_tokenization.yaml  tokenization_instruction_example.yaml
config/schemas/: anonymization.schema.yaml  base.schema.yaml  clm_training.deepspeed.schema.yaml  clm_training.fsdp.schema.yaml  clm_training.logging.schema.yaml  clm_training.schema.yaml  continual.ddp.schema.yaml  continual.fsdp.schema.yaml  continual.logging.schema.yaml  continual.schema.yaml  convert.schema.yaml  (+44 more)
configs/: instruction_minimal.yaml  instruction_test.yaml  pretraining_minimal.yaml  pretraining_test.yaml
docker/: Dockerfile  Dockerfile.prod  dockerfile
docs/: CLM_TRAINING.md  CONFIGURATION.md  CONVERT.md  DEVELOPER_GUIDE.md  FAST_VS_SLOW_TOKENIZERS.md  PUBLISH.md  README.md  TOKENIZATION.md  TOKENIZATION_INDEX.md  TOKENIZATION_PERFORMANCE.md
guides/: pretraining.html  tokenization.html
scripts/: analyze_dataset.py  check_hf_kan.py  check_mlm_masking.py  check_vocab_range.py  compare_hf_models.sh  inspect_tokenized_valid.py  instruction_pretraining,py  instruction_pretraining.py  publish.py  run_parameterized_tests.py  visualize_tokenized_dataset.py  visualize_tokenized_dataset.sh
slurm/: DOCKER_TROUBLESHOOTING.md  README.md  p.slurm  run_container.sh  slurm_config.env  submit_job.sh  validate.sh
src/: main.py  main_test.py
tests/: README.md  conftest.py
tokenized_visualizations/: train_samples.json  valid_samples.json
tutorials/: clm_training_config_example.yaml  clm_training_tutorial.ipynb  clm_training_tutorial_appendix.md  publish_config_example.yaml  publish_tutorial.ipynb  publish_tutorial_appendix.md  tokenization_config_example.yaml  tokenization_instruction_tutorial.ipynb  tokenization_tutorial.ipynb  tokenization_tutorial_appendix.md  tutorial_run_commands.md
(+316 files in other folders)
