[tool.poetry]
name = "workspace"
version = "0.1.0"
description = "LMTK"
authors = ["Ernesto Luis Estevanell-Valladares <ernesto.estevanell@ua.es>, Fabio Yáñez-Romero <fabio.yanez@ua.es>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
transformers = "^4.39.3"
datasets = "^2.17.0"
evaluate = "^0.4.3"
accelerate = "^0.28.0"
tokenizers = "^0.15.2"
pyyaml = "^6.0.1"
jsonschema = "^4.23.0"
python-box = "^7.3.2"
types-pyyaml = "^6.0.12"
numpy = "^1.26.4" # Pinned <2.0 due to np.float_ deprecation in NumPy 2.0. Remove pin after code update.
scikit-learn = "^1.6.1"
lightning = "^2.5.1"
wandb = "0.17.0"
pydantic = "1.10.11"
deepspeed = "^0.13.5"
sentencepiece = "^0.1.5"
codecarbon = "*"
kan = {git = "https://github.com/Pytorch-KAN/pytorch_kan.git"}

# flash-attn package is commented out as it requires special setup
# flash-attn = { version = "^2.7.4", optional = true }
box = "^0.1.5"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]

pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"
hypothesis = "^6.130.8"
sentencepiece = "^0.1.99"
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.12.0"
mypy = "^1.5.1"
tox = "^4.11.3"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-book-theme = "^1.1.0"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
sphinx-togglebutton = "^0.3.2"
myst-parser = "^2.0.0"
sphinxcontrib-mermaid = "^1.0.0"
nbsphinx = "^0.9.3"
sphinx-tabs = "^3.4.4"
pydata-sphinx-theme = "^0.14.4"

[tool.poetry.extras]
gpu = ["flash-attn"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Repository" = "https://github.com/yourusername/workspace"
"Documentation" = "https://yourusername.github.io/workspace"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "datasets.*",
    "lightning.*",
    "deepspeed.*"
]
ignore_missing_imports = true
